fix drug list page list was covered when has filter toolbar

--- a/mobile/source/stylesheets/custom.scss
+++ b/mobile/source/stylesheets/custom.scss
@@ -382,3 +382,9 @@ ul.border li {
   margin-bottom: 48px;
 }
 
+.oneHeight{
+  height: 55px;
+}
+.twiceHeight{
+  height: 110px;
+}
